syntax = "proto2";

package metrics;

message HttpRequest {
  optional string host = 1;
  optional string method = 2;
  optional string path = 3;
  repeated string arguments = 4;
  optional int64 status = 5;
  optional double response_time = 6;
}

message SubCommandExecution {
  optional string command = 1;
  repeated string arguments = 2;
  optional double execution_time = 3;
  optional int64 exit_code = 4;
}

message MetricsSchema {
  repeated string arguments = 1;
  optional string command = 2;
  optional double depot_tools_age = 3;
  optional double execution_time = 4;
  optional int64 exit_code = 5;
  optional string host_arch = 6;
  optional string host_os = 7;
  repeated string project_urls = 8;
  optional string python_version = 9;
  optional int64 timestamp = 10;
  repeated HttpRequest http_requests = 11;
  optional string git_version = 12;
  repeated SubCommandExecution sub_commands = 13;
  optional int64 metrics_version = 14;
}
